--- a/src/scss/notReady.scss
+++ b/src/scss/notReady.scss
@@ -72,7 +72,7 @@
                 width: 100% !important;
                 justify-content: space-between;
                 .header-3-inside-icons {
-                    display: flex;
+                    display: flex !important;
 
                     li {
                         margin-right: 10px;
