--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -479,7 +479,7 @@ footer {
             }
         }
         .cards {
-            flex-direction: column;
+            // flex-direction: column;
             .card {
                 margin: 15px auto;
                 width: 75%;
