--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -479,9 +479,11 @@ footer {
             }
         }
         .cards {
-            flex-direction: column;
+            // flex-direction: column;
+            overflow-x: scroll;
             .card {
-                margin: 15px auto;
+                // margin: 15px auto;
+                margin-right: 15px;
                 width: 75%;
             }
         }
