--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -113,6 +113,25 @@ header {
                         margin-left: 10px;
                     }
                 }
+
+                .header-3-inside-icons {
+                    .liked {
+                        position: relative;
+
+                        span {
+                            text-align: center;
+                            border-radius: 7px;
+                            position: absolute;
+                            width: 12px;
+                            border: 1px solid silver;
+                            background: orange;
+                            color: #fff;
+                            font-size: 10px;
+                            right: -6px;
+                            bottom: 0;
+                        }
+                    }
+                }
             }
         }
     }
